[package]
name = "libcoap-sys"
version = "0.1.0"
authors = ["Maarten de Klerk <maarten@deklerk.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "FFI bindings for libcoap"
repository = "https://github.com/GewoonMaarten/libcoap-rs"
readme = "README.md"
categories = ["network-programming", "external-ffi-bindings"]
keywords = ["coap"]
links = "libcoap"
build = "build.rs"

[build-dependencies]
bindgen = "0.58"
cmake = "0.1"

[dependencies]
libc = { version = "0.2.97", std = false }